FIX: Fixed chat sidebar item visible content

--- a/src/components/entities/ChatItem/index.module.scss
+++ b/src/components/entities/ChatItem/index.module.scss
@@ -30,6 +30,7 @@
     height: 48px;
 }
 .content {
+    flex-grow: 1;
 }
 .head {
     margin-bottom: 4px;
