--- a/src/components/widgets/Buyer/DeliveryChats/Chats/index.module.scss
+++ b/src/components/widgets/Buyer/DeliveryChats/Chats/index.module.scss
@@ -22,7 +22,3 @@
         justify-content: space-between;
     }
 }
-
-.wrapper {
-    width: 300px;
-}
